--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "DejaVu Sans Mono";
+  src: url("DejaVuSansMono.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
     background-color:#1E1E1E;
     font-family: "DejaVu Sans Mono";
